--- a/index.html
+++ b/index.html
@@ -4,25 +4,41 @@
     <meta charset="UTF-8" />
     <title>RPG - Dragon Repeller</title>
     <link rel="stylesheet" href="style.css" />
+    <script src="scripts/translate.js"></script>
+    <script>
+      function load(chosenLanguage) {
+        var translate = new Translate();
+        var currentLng = chosenLanguage; //'fr'or 'en'
+        var attributeName = "data-tag";
+        translate.init(attributeName, currentLng);
+        translate.process();
+      }
+    </script>
   </head>
 
   <body>
     <div id="game">
       <div id="stats">
-        <span class="stat"
-          >XP: <strong><span id="xpText">0</span></strong></span
-        >
-        <span class="stat"
-          >Health: <strong><span id="healthText">100</span></strong></span
-        >
-        <span class="stat"
-          >Gold: <strong><span id="goldText">50</span></strong></span
-        >
+        <div class="stats-container">
+          <span class="stat"
+            >XP: <strong><span id="xpText">0</span></strong></span
+          >
+          <span data-tag="health">Health: </span
+          ><strong><span class="stat" id="healthText">100</span></strong>
+
+          <span data-tag="gold">Gold:</span>
+          <strong><span class="stat" id="goldText">50</span></strong>
+        </div>
+        <div class="language">
+          <a href="#" class="EN" onclick="load('en')">EN</a>
+          <a href="#" class="FR" onclick="load('fr')">FR</a>
+        </div>
       </div>
+
       <div id="controls">
-        <button id="button1">Go to store</button>
-        <button id="button2">Go to cave</button>
-        <button id="button3">Fight dragon</button>
+        <button id="button1" data-tag="store">Go to store</button>
+        <button id="button2" data-tag="cave">Go to cave</button>
+        <button id="button3" data-tag="dragon">Fight dragon</button>
       </div>
       <div id="monsterStats">
         <span class="stat"
@@ -32,12 +48,12 @@
           >Health: <strong><span id="monsterHealth"></span></strong
         ></span>
       </div>
-      <div id="text">
+      <div id="text" data-tag="text">
         Welcome to Dragon Repeller. You must defeat the dragon that is
         preventing people from leaving the town. You are in the town square.
         Where do you want to go? Use the buttons above.
       </div>
     </div>
-    <script src="script.js"></script>
+    <script src="scripts/script.js"></script>
   </body>
 </html>
